@@ -4,34 +4,11 @@ FROM openjdk:24-jdk-slim
 # Set working directory
 WORKDIR /app
 
-# Copy Maven wrapper and pom.xml (if using Maven)
-COPY mvnw .
-COPY .mvn .mvn
-COPY pom.xml .
-
-# Download dependencies (this layer will be cached if pom.xml doesn't change)
-RUN ./mvnw dependency:go-offline -B
-
-# Copy source code
-COPY src ./src
-
-# Build the application
-RUN ./mvnw clean package -DskipTests
-
-# Create a new stage for the runtime
-FROM openjdk:24-jdk-slim
-
-# Set working directory
-WORKDIR /app
-
-# Copy the built JAR from the previous stage
-COPY --from=0 /app/target/*.jar app.jar
+# Copy the built JAR from local machine into the container
+COPY target/movies-0.0.1-SNAPSHOT.jar .
 
 # Expose the port your Spring Boot app runs on
 EXPOSE 8080
 
-# Set environment variables
-ENV JAVA_OPTS="-Xmx512m -Xms256m --enable-preview"
-
 # Run the application
-ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"]
+ENTRYPOINT ["java", "-jar", "movies-0.0.1-SNAPSHOT.jar"]
